# magnet-monitor

./: README.md  magnetdash.py  magnetlog.py  magnetrpc.py  pyproject.toml
log/: log-000000000.csv  log-000000001.csv  log-000000002.csv  log-000000003.csv  log-000000004.csv  log-000000005.csv  log-000000006.csv  log-000000007.csv  log-000000008.csv  log-000000009.csv  log-000000010.csv  log-000000011.csv  log-000000012.csv  log-000000013.csv  log-000000014.csv  log-000000015.csv  log-000000016.csv  log-000000017.csv  log-000000018.csv  log-000000019.csv  log-000000020.csv  log-000000021.csv  log-000000022.csv  log-000000023.csv  log-000000024.csv  log-000000025.csv  log-000000026.csv  log-000000027.csv  log-000000028.csv  log-000000029.csv  log-000000030.csv  log-000000031.csv  log-000000032.csv  log-000000033.csv  log-000000034.csv  log-000000035.csv  log-000000036.csv  log-000000037.csv  log-000000038.csv  log-000000039.csv
